--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,8 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', media='screen', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', media='screen', href='/stylesheets/style.css') 
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
     block content
     script(src='http://code.jquery.com/jquery.js')
     script(src='javascripts/bootstrap.min.js')
+    block late-scripts
