--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   h1= title
   div#fb-root
   p Here are your birthday posts...
-  p#summary
+    span#summary
   input.do-comments-and-likes(type='button', value='Post the comments, do the likes...')
   table#birthday-posts
   input.do-comments-and-likes(type='button', value='Post the comments, do the likes...')
