--- a/views/index.jade
+++ b/views/index.jade
@@ -13,4 +13,4 @@ block content
 
 block late-scripts
   script(src='javascripts/main.js')
-  script(src='https://raw.github.com/janl/mustache.js/master/mustache.js')
+  script(src='javascripts/mustache.js')
