Adding the FB login button where necessary. "hbty" is caught as a birthday post. Fixes #1.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ a {
   color: #00B7FF;
 }
 */
-.do-comments-and-likes,.got-birthday-posts {
+.do-comments-and-likes,.got-birthday-posts, #logged-in, #not-logged-in {
 	display: none;
 }
 
