--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,9 @@
 doctype 5
-html
+html(lang="en")
   head
     title= title
     link(rel='stylesheet', media='screen', href='/stylesheets/bootstrap.min.css')
+    link(rel='stylesheet', media='screen', href='/stylesheets/bootstrap-responsive.min.css') 
     link(rel='stylesheet', media='screen', href='/stylesheets/style.css') 
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
   body
