Adding OG tags and making things look a bit nicer.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,3 +23,10 @@ a {
 .opacity-please {
 	opacity: 0.3;
 }
+
+.logo {
+	text-indent: 45px;
+	background-position: left;
+	background-repeat: no-repeat;
+	background-image: url('../images/logo40x40.png');
+}
