--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(lang="en")
     link(rel='stylesheet', media='screen', href='/stylesheets/bootstrap-responsive.min.css') 
     link(rel='stylesheet', media='screen', href='/stylesheets/style.css') 
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    block head
   body
     block content
     script(src='http://code.jquery.com/jquery.js')
