Tweaking the OG description

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block head
   meta(property="og:title", content="The Birthday Helper")
-  meta(property="og:description", content="An app to help manage the onslaught of birthday messages on Facebook.")
+  meta(property="og:description", content="An app to help manage the onslaught of birthday posts on Facebook.")
   meta(property="og:image", content="http://www.thebirthdayhelper.com/images/logo.png")
   meta(property="og:type", content="website")
   meta(property="og:url", content="http://www.thebirthdayhelper.com/")
