--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,4 +11,17 @@ html(lang="en")
     block content
     script(src='http://code.jquery.com/jquery.js')
     script(src='javascripts/bootstrap.min.js')
+    //- Currently only set in index.js, not everywhere
+    if isProduction
+      script
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-266838-4']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+
     block late-scripts
