Using the minified JQuery.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ html(lang="en")
     block head
   body
     block content
-    script(src='http://code.jquery.com/jquery.js')
+    script(src='http://code.jquery.com/jquery.min.js')
     script(src='javascripts/bootstrap.min.js')
     //- Currently only set in index.js, not everywhere
     if isProduction
