--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ a {
   color: #00B7FF;
 }
 */
-.do-comments-and-likes,.got-birthday-posts, #logged-in, #not-logged-in {
+.do-comments-and-likes,.got-birthday-posts, .got-no-birthday-posts, #logged-in, #not-logged-in {
 	display: none;
 }
 
