--- a/views/index.jade
+++ b/views/index.jade
@@ -45,9 +45,10 @@ block content
           .row
             .span12
               button.do-comments-and-likes.btn.btn-primary Post comments and likes
-              //- table#birthday-posts.table
+              button.do-likes.btn.btn-info Like the posts, but don't add any comments
               #birthday-posts.container.table
               button.do-comments-and-likes.btn.btn-primary Post comments and likes
+              button.do-likes.btn.btn-info Like the posts, but don't add any comments
 
 block late-scripts
   script(src='javascripts/main.js')
