--- a/views/index.jade
+++ b/views/index.jade
@@ -45,11 +45,15 @@ block content
           br
           span.opacity-please Posts that look like this don't need any comments or likes.
           .row
-            .span12
-              button.do-comments-and-likes.btn.btn-primary Post comments and likes
+            .span12.call-to-action-row
+              button.do-comments-and-likes.btn.btn-primary Add comments and likes
               button.do-likes.btn.btn-info Like the posts, but don't add any comments
+          .row
+            .span12
               #birthday-posts.container.table
-              button.do-comments-and-likes.btn.btn-primary Post comments and likes
+          .row
+            .span12.call-to-action-row
+              button.do-comments-and-likes.btn.btn-primary Add comments and likes
               button.do-likes.btn.btn-info Like the posts, but don't add any comments
 
 block late-scripts
