--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,3 @@
-/*body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
-*/
 #fb-login {
 	margin-right: 5px;
 }
@@ -14,11 +5,9 @@ a {
 .call-to-action-row {
 	margin-top: -20px;
 }
+
 .call-to-action-row button {
 	margin-top: 20px;
-}
-
-.do-comments-and-likes {
 	margin-right: 20px;
 }
 
@@ -63,7 +52,7 @@ a {
 	background-image: url('../images/logo40x40.png');
 }
 
-.nickname-textbox input{
+.nickname-textbox input {
 	height: 0.85em;
 	width: 10em;
 }
@@ -118,5 +107,18 @@ a {
 	margin-top: -4px;
 }
 
+/* Editing comment tempates */
+.customize-comments-view {
+	display: none;
+}
 
+.reset-template {
+	display: none;
+	width: 0px;
+	/*opacity: 0.3;*/
+}
 
+ .edit-comment-template input {
+	height: 0.85em;
+	width: 15em;
+}
