Adding better icons

--- a/views/index.jade
+++ b/views/index.jade
@@ -31,7 +31,8 @@ block content
             img(src="images/login-button.png")
           | to continue - we won't touch your timeline until you ask us to.
     #logged-in
-      p#getting-birthday-posts Fetching your birthday posts now, please wait...
+      p#getting-birthday-posts Fetching your birthday posts now, please wait...&nbsp;
+        i.icon-spinner.icon-spin
       .got-no-birthday-posts
         p You have no birthday posts. Come back on your birthday. In the mean time, here's some Family Guy.
         div
