Making cancel button work

--- a/views/index.jade
+++ b/views/index.jade
@@ -47,7 +47,7 @@ block content
           .row            
             .span12.call-to-action-row
               button.customize-comments-save.btn.btn-primary Save
-              button.customize-comments-save.btn Cancel  
+              button.customize-comments-cancel.btn Cancel  
         .posts-view
           p Here are your birthday posts...
               span#summary              
