--- a/views/index.jade
+++ b/views/index.jade
@@ -43,11 +43,18 @@ block content
             .span12
               strong Customize Comment Templates
               p Not happy with the comments we made for you? Not a problem, you can change them here...
-              #comment-template-list                            
           .row            
             .span12.call-to-action-row
               button.customize-comments-save.btn.btn-primary Save
-              button.customize-comments-cancel.btn Cancel  
+              button.customize-comments-cancel.btn Cancel
+              button.customize-comments-restore-defaults.btn.btn-link Restore defaults
+          .row
+            .span12
+              #comment-template-list
+          .row
+            .span12
+              button.customize-comments-add-template.btn
+                i.icon-large.icon-plus
         .posts-view
           p Here are your birthday posts...
               span#summary              
