Fixing breaking change in Jade

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html(lang="en")
     script(src='javascripts/bootstrap.min.js')
     //- Currently only set in index.js, not everywhere
     if isProduction
-      script
+      script.
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-266838-4']);
         _gaq.push(['_trackPageview']);
